minor fix (sonarQube)